--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,8 @@
   "ignore": [],
   "dependencies": {
     "bedrock-angular": "^1.0.1",
+    "bedrock-angular-alert": "^1.0.0",
+    "bedrock-angular-modal": "^1.0.0",
     "bedrock-angular-resource": "^1.0.1"
   }
 }
