--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "bedrock-angular-key",
   "version": "1.0.1-dev",
-  "main": "./index.js",
+  "main": "./main.js",
   "moduleType": ["amd"],
   "ignore": [],
   "dependencies": {
