--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "bedrock-angular-key",
-  "version": "2.0.0",
+  "version": "2.0.1-dev",
   "main": "./main.js",
   "moduleType": ["amd"],
   "ignore": [],
