--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,10 @@
 {
   "name": "bedrock-angular-key",
-  "version": "3.1.3-dev",
+  "version": "3.1.3",
   "main": "./main.js",
-  "moduleType": ["amd"],
+  "moduleType": [
+    "amd"
+  ],
   "ignore": [],
   "dependencies": {
     "bedrock-angular": "^2.0.0",
