--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "bedrock-angular-key",
-  "version": "3.1.4",
+  "version": "3.1.5-0",
   "main": "./main.js",
   "moduleType": [
     "amd"
