--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bedrock-angular-key",
-  "version": "4.0.1-0",
+  "version": "4.0.1",
   "description": "bedrock-angular-key",
   "main": "index.js",
   "dependencies": {
