--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "dependencies": {
     "angular": "~1.6.4",
     "bedrock-angular-alert": "^3.0.0",
-    "bedrock-angular-modal": "^4.0.0",
+    "bedrock-angular-modal": "^5.0.0",
     "bedrock-angular-resource": "^3.0.0",
     "bedrock-angular-selector": "^4.0.0",
     "bedrock-angular-session": "^4.0.0",
     "bedrock-angular-ui": "^3.0.0",
-    "forge": "~0.6.34"
+    "font-awesome": "^4.7.0",
+    "node-forge": "~0.6.34"
   },
   "bedrock": {
     "browserDependencies": "all"
