--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "angular": "~1.6.4",
-    "bedrock-angular-alert": "^3.0.0",
-    "bedrock-angular-modal": "^5.0.0",
+    "bedrock-angular-alert": "digitalbazaar/bedrock-angular-alert#material",
+    "bedrock-angular-modal": "digitalbazaar/bedrock-angular-modal#material",
     "bedrock-angular-resource": "^3.0.0",
-    "bedrock-angular-selector": "^4.0.0",
+    "bedrock-angular-selector": "digitalbazaar/bedrock-angular-selector#material",
     "bedrock-angular-session": "^4.0.0",
-    "bedrock-angular-ui": "^3.0.0",
+    "bedrock-angular-ui": "digitalbazaar/bedrock-angular-ui#material",
     "font-awesome": "^4.7.0",
     "node-forge": "~0.7.1"
   },
