--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bedrock-angular-key",
-  "version": "4.0.5-0",
+  "version": "5.0.0",
   "description": "bedrock-angular-key",
   "main": "index.js",
   "dependencies": {
